# lerobot-legged-zoo

./: .gitignore  README.md  pyproject.toml
models/bipedal_plateform/mjcf/: config.json  robot.xml
models/bipedal_plateform/mjcf/assets/: 27628_01_050_catpart.part  femur_12.part  femur_12_sym.part  forarm_part.part  part_3.part  shoulder1_part.stl  tibias12.part  (+1 more)
models/bipedal_plateform/urdf/: config.json  robot.urdf  robot.xml  robot_simplified.xml
models/g1_description/: g1_23dof.xml  g1_29dof.xml
models/leggy/: robot.xml
models/lerobot_humanoide/mjcf/: config.json  robot.xml  scene.xml
models/lerobot_humanoide/urdf/: config.json  robot.urdf  robot.xml  robot.yaml  robot_simplified.xml
models/open_duck/: config.json  robot.xml  scene.xml
models/open_duck_v2/: config.json  open_duck_v2.xml  open_duck_v2_backlash.xml  scene_flat_terrain.xml  scene_flat_terrain_backlash.xml  scene_rough_terrain_backlash.xml
training_exemples/: __init__.py
training_exemples/g1_23dof/: __init__.py  env_cfgs.py  g1_23dof_constants.py  rl_cfg.py
training_exemples/g1_29dof/: __init__.py  env_cfgs.py  g1_29dof_constants.py  rl_cfg.py
training_exemples/leggy/: leggy_constants.py
training_exemples/lerobot_humanoid/: env_cfgs.py  lerobot_humanoid_constants.py
training_exemples/lerobot_humanoid_full/: env_cfgs.py  lerobot_humanoid_full_constants.py
training_exemples/lerobot_humanoid_no_arms/: env_cfgs.py  lerobot_humanoid_no_arms_constants.py
training_exemples/open_duck/: open_duck_constants.py
training_exemples/open_duck_v2/: open_duck_v2_constants.py
(+62 files in other folders)
